--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+    application:
+        name: notification-service
+
     datasource:
         driver-class-name: org.postgresql.Driver
         url: jdbc:postgresql://localhost:5434/notification-db
@@ -35,3 +38,13 @@ spring:
 
 server:
     port: 8084
+
+eureka:
+    client:
+        service-url:
+            default-zone: http://localhost:8761/eureka/
+        healthcheck:
+            enabled: true
+    instance:
+        lease-expiration-duration-in-seconds: 2
+        lease-renewal-interval-in-seconds: 1
