--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,22 +1,26 @@
+logging:
+    level:
+        root: INFO
+
 spring:
     application:
         name: notification-service
 
     datasource:
-        driver-class-name: org.postgresql.Driver
-        url: jdbc:postgresql://localhost:5434/notification-db
-        username: admin
-        password: admin
+#        driver-class-name: org.postgresql.Driver
+        url: ${DATABASE_URL}
+        username: ${DATABASE_USERNAME}
+        password: ${DATABASE_PASSWORD}
     jpa:
         hibernate:
             ddl-auto: update
         show-sql: true
 
     rabbitmq:
-        host: localhost
-        port: 5672
-        username: admin
-        password: admin
+        host: ${RABBITMQ_HOST}
+        port: ${RABBITMQ_PORT}
+        username: ${RABBITMQ_USERNAME}
+        password: ${RABBITMQ_PASSWORD}
 
         retry-queues-ttl: 2000
         retry-max-count: 3
@@ -36,15 +40,15 @@ spring:
             exchange: "dead-exchange"
             routing-key: "dead-key"
 
-server:
-    port: 8084
+#eureka:
+#    client:
+#        service-url:
+#            default-zone: ${REGISTRY_SERVICE_URL}
+#        healthcheck:
+#            enabled: true
+#    instance:
+#        lease-expiration-duration-in-seconds: 2
+#        lease-renewal-interval-in-seconds: 1
 
-eureka:
-    client:
-        service-url:
-            default-zone: http://localhost:8761/eureka/
-        healthcheck:
-            enabled: true
-    instance:
-        lease-expiration-duration-in-seconds: 2
-        lease-renewal-interval-in-seconds: 1
+server:
+    port: ${PORT}
