--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,14 +7,13 @@ spring:
         name: notification-service
 
     datasource:
-#        driver-class-name: org.postgresql.Driver
         url: ${DATABASE_URL}
         username: ${DATABASE_USERNAME}
         password: ${DATABASE_PASSWORD}
-    jpa:
-        hibernate:
-            ddl-auto: update
-        show-sql: true
+
+    liquibase:
+        enabled: true
+        change-log: classpath:liquibase/master.xml
 
     rabbitmq:
         host: ${RABBITMQ_HOST}
