cloud-course management config

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,11 @@ logging:
   level:
     root: INFO
 
+management:
+  metrics:
+    tags:
+      application: ${SPRING_APPLICATION_NAME}
+
 spring:
   datasource:
     url: ${DATABASE_URL}
