--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,5 +37,11 @@ spring:
     username: ${RABBITMQ_USERNAME}
     password: ${RABBITMQ_PASSWORD}
 
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          jwk-set-uri: ${AUTH_SERVER_URL}/protocol/openid-connect/certs
+
 server:
   port: ${PORT}
